# ColorTracker

./: .gitignore  .ruff.toml  AGENTS.md  CHANGELOG.md  GEMINI.md  README.md  RELEASE_NOTES.md  Schedule-GeminiTask.ps1  UI_IMPROVEMENT_PLAN.md  benchmark.py  build_release.bat  config.json  config.json.20260103_184909.bak  config_experimental.json  conftest.py  gemini_help.txt  main.py  performance_analysis.md  performance_stats.csv  prediction_simulation.py  prompt.txt  prove_prediction_issues.py  pyproject.toml  pyright_final.txt  pyright_report_new.txt  pyright_verification.txt  pyrightconfig.json  pytest.ini  repro_log.txt  requirements.txt  robustness_results.txt  ruff_errors.txt  ruff_final.txt  ruff_report_new.txt  ruff_verification.txt  run_debug.ps1  run_gemini.bat  setup_and_run.ps1  test_results.txt  vectors.db-shm  (+4 more)
.sisyphus/: ralph-loop.local.md
_staging/: config.json  merge_staging.ps1  pyrightconfig.json
conductor/: AGENTS.md  product-guidelines.md  product.md  tech-stack.md  tracks.md
core/: AGENTS.md  capture.py  detection.py  fast_math.py  low_level_movement.py  motion_engine.py  prediction.py
docs/: TECHNICAL_WALKTHROUGH.md  setup.md  user_guide_manual.md
gui/: AGENTS.md  __init__.py  main_window.py
libs/: README.txt
plans/: color_picker_v4_design.md  precision_lens_v3_spec.md  precision_picker_design.md  primary_window_migration.md  project_roadmap.md  qol_improvement_plan.md  refactor_detection_strategy.md
profiles/: Default.json  default.json  test_profile_pytest.json
tests/: AGENTS.md  benchmark_performance.py  conftest.py  (+38 more)
(+85 files in other folders)
