[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "color-tracker"
version = "3.5.1"
description = "High-performance color tracking and automation tool"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "YeonGyu Kim", email = "code-yeongyu@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "dearpygui>=2.1.1",
    "mss>=10.1.0",
    "opencv-python>=4.12.0.88",
    "numpy>=1.26.0",
    "pyautogui>=0.9.54",
    "pynput>=1.7.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
    "pyright>=1.1.3",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.pyright]
include = ["core", "gui", "utils", "main.py"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
